--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,6 +23,7 @@ en:
     columns:
       first_name: first name
       last_name: last name
+      birthday: birthday
   teacher:
     columns:
       first_name: first name
@@ -31,4 +32,5 @@ en:
   subjects:
     columns:
       full_name: Full name
+      birthday: Birthday
       avg_notes: Notes avarange
